WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225897
_WKWebAuthenticationPanelDelegate registration and assertion SPI throws an exception without an LAContext
https://bugs.webkit.org/show_bug.cgi?id=225897
Summary
_WKWebAuthenticationPanelDelegate registration and assertion SPI throws an ex...
Garrett Davidson
Reported
2021-05-17 16:43:10 PDT
The fix for 225218 was incomplete. Now instead of dropping the request entirely, WebKit tries to proceed and attempts to stick the nil contexts in NSDictionaries, throwing exceptions.
Attachments
Patch
(4.73 KB, patch)
2021-05-17 17:08 PDT
,
Garrett Davidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-05-17 16:47:08 PDT
<
rdar://problem/78128655
>
Garrett Davidson
Comment 2
2021-05-17 17:08:38 PDT
Created
attachment 428896
[details]
Patch
EWS
Comment 3
2021-05-18 09:49:10 PDT
garrett_davidson@apple.com
does not have committer permissions according to
https://raw.githubusercontent.com/WebKit/WebKit/main/Tools/Scripts/webkitpy/common/config/contributors.json
. Rejecting
attachment 428896
[details]
from commit queue.
EWS
Comment 4
2021-05-18 10:04:41 PDT
Committed
r277658
(
237863@main
): <
https://commits.webkit.org/237863@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428896
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug