Add nil checks for LAContexts before inserting them in the dictionaries. https://bugs.webkit.org/show_bug.cgi?id=225897

Patch by Garrett Davidson <garrett_davidson@apple.com> on 2021-05-18
Reviewed by Tim Horton.

In 225218 we stopped dropping requests that didn't have LAContexts. However, that let us
proceed only until we tried to put the (nil) LAContext in an NSDictionary to make a Sec*
call, which throws an exception. This patch adds proper nil checking before inserting the
contexts into the dictionaries.

Manually tested registration and assertion on macOS with and without LAContexts.

* UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm:
(WebKit::LocalAuthenticator::continueGetAssertionAfterUserVerification):
* UIProcess/WebAuthentication/Cocoa/LocalConnection.mm:
(WebKit::LocalConnection::createCredentialPrivateKey const):

Canonical link: https://commits.webkit.org/237863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277658 268f45cc-cd09-0410-ab3c-d52691b4dbfc